vlib/v/parser/tests/struct_embed_duplicate.vv
struct Abc {
	foo int = 5
}

struct Xyz {
	Abc
	Abc
	bar int
}
